Fixed essay listing display issue when author name wraps to 2 lines and applied proper list item styles to ordered lists.

--- a/app/assets/stylesheets/fresh_writing.css.scss
+++ b/app/assets/stylesheets/fresh_writing.css.scss
@@ -102,7 +102,7 @@ a:active {
 
 /* ARTICLE */
 
-.page-body p, .body ul {
+.page-body p, .body ul, .body ol {
   color:#333;
   font-family: $content;
   font-size:2rem;
@@ -111,7 +111,7 @@ a:active {
   margin-bottom:3rem;
 }
 
-.body ul li {
+.body li {
   margin-left:30px;
 }
 
@@ -514,10 +514,16 @@ div.volume {
 .listing {
   li {
     position:relative;
+    display: flex;
+    flex-wrap:wrap;
+    align-items: baseline;
+    * {
+      flex-grow: 1;
+    }
     a.title {
-      position: absolute;
+      /*position: absolute;
       left:0.625rem;
-      bottom:4.3rem;
+      bottom:4.3rem;*/
       background:rgba(68,131,75,0.7);
       color: #fff;
       width: 210px;
@@ -596,7 +602,10 @@ div.volume {
     color:$lt-grey;
     border:none;
   }
-
+  .author {
+    max-width: 74%;
+    float: left;
+  }
 }
 
 .page-body h1 {
